--- a/www/index.html
+++ b/www/index.html
@@ -12,17 +12,11 @@
     <!-- R.W. 11/10/2015 -->
     <link href="css/tabSlideBox.css" rel="stylesheet">
 
-
-
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
-
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
 	  <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/filelogger/dist/filelogger.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -32,6 +26,7 @@
     <script src="js/factories.js"></script>
     <script src="js/config.js"></script>
     <script src="js/tabSlideBox.js"></script>
+    <script src="js/services.js"></script>
 
 
 
