1) push notifications 2) version : 101

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
 	  <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/ngstorage/ngStorage.min.js"></script>
     <script src="lib/filelogger/dist/filelogger.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -27,8 +28,6 @@
     <script src="js/config.js"></script>
     <script src="js/tabSlideBox.js"></script>
     <script src="js/services.js"></script>
-
-
 
   </head>
 
